# oracle

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  deploy-dashboard.yml  near-rewards.yml
crates/bitcoin-oracle-contract/: Cargo.toml  README.md
crates/bitcoin-oracle-contract/src/: bitcoin_light_client.rs  lib.rs  types.rs
crates/bitcoin-oracle-indexer/: Cargo.toml  README.md
crates/bitcoin-oracle-indexer/src/: main.rs  proof_extractor.rs
crates/bitcoin-oracle-node/: Cargo.toml  README.md
crates/bitcoin-oracle-node/src/: main.rs  proof_extractor.rs  types.rs
crates/crosschain-indexer-centralized/: Cargo.toml  README.md
crates/crosschain-indexer-centralized/src/: main.rs
crates/crosschain-node-centralized/: Cargo.toml  README.md
crates/crosschain-node-centralized/src/: main.rs
crates/dashboard-backend/: Cargo.toml  index.html
crates/dashboard-backend/src/: main.rs
crates/dashboard-frontend/: next.config.js  package-lock.json  package.json
crates/dashboard-frontend/api/: oracles.ts
crates/dashboard-frontend/components/: CopyableCode.tsx  CreateOracleModal.tsx  OracleCard.tsx  OracleModal.tsx
crates/dashboard-frontend/data/: mockOracles.ts
crates/dashboard-frontend/pages/: _app.tsx  _document.tsx  index.tsx
crates/example-consumer/: Cargo.toml  README.md
crates/example-consumer/src/: lib.rs
crates/gpt4o-indexer/: Cargo.toml  README.md
crates/gpt4o-indexer/src/: main.rs
crates/gpt4o-node/: Cargo.toml  README.md
crates/gpt4o-node/src/: main.rs
crates/indexer/: Cargo.toml  README.md
crates/indexer/src/: main.rs
crates/nearai-inference-node/: Cargo.toml
crates/nearai-inference-node/src/: main.rs
crates/oracle-contract/: Cargo.toml  README.md  rust-toolchain.toml
crates/oracle-contract/src/: balance.rs  consumer.rs  fees.rs  lib.rs  producer.rs
crates/oracle-contract/tests/: deposits.rs  fees.rs  register.rs  request_response.rs  test.rs  test_env.rs  two_responses.rs
crates/oracle-contract/tests/tests/: deposits.rs  example_consumer.rs  fees.rs  mod.rs  register.rs  request_response.rs  two_responses.rs
crates/reclaim-gpt-contract/: Cargo.toml  README.md
crates/reclaim-gpt-contract/src/: lib.rs  oracle.rs  reclaim.rs
crates/reclaim-gpt-indexer/: README.md  index.js  package.json
crates/reclaim-gpt-node/: README.md  index.js  package-lock.json  package.json
crates/test-ft-contract/: Cargo.toml  README.md
crates/test-ft-contract/src/: lib.rs
