[workspace]
members = [
    "crates/oracle-contract",
    "crates/gpt4o-indexer",
    "crates/crosschain-indexer-centralized",
    "crates/reclaim-gpt-contract",
    "crates/test-ft-contract",
    "crates/example-consumer",
    "crates/dashboard-backend",
    "crates/bitcoin-oracle-contract",
    "crates/bitcoin-oracle-indexer",
]
resolver = "2"

[profile.release]
lto = true
panic = "abort"

[profile.release.package.intear-oracle]
codegen-units = 1
opt-level = "z"
debug = false
overflow-checks = true

[profile.release.package.reclaim-gpt-contract]
codegen-units = 1
opt-level = "z"
debug = false
overflow-checks = true
