[package]
name = "dashboard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.3", features = ["tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
parking_lot = "0.12"
anyhow = "1.0"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
